--- a/_posts/2022-04-25-talk.md
+++ b/_posts/2022-04-25-talk.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      GenericObjectPoolConfig Exception
-subtitle:   ClassNotFoundException: org.apache.commons.pool2.impl.GenericObjectPoolConfig
+title:      随便打点字
+subtitle:   随便打点字
 date:       2022-04-25
 author:     Autuan.Yu
 header-img: https://cdn.pixabay.com/photo/2021/12/02/18/38/seagulls-6841129_960_720.jpg
